--- a/silk.html
+++ b/silk.html
@@ -122,16 +122,16 @@
             box-shadow: 0 8px 25px rgba(142, 68, 173, 0.3);
         }
 
-        .product-image-placeholder {
+        .product-image {
             width: 100%;
             height: 250px;
-            background-color: #e0e0e0;
+            object-fit: cover;
             border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #888;
-            font-weight: bold;
+            transition: transform 0.3s ease;
+        }
+
+        .product-item-card:hover .product-image {
+            transform: scale(1.05);
         }
         
         .product-item-card h3 {
@@ -291,18 +291,66 @@
     <main class="product-grid-container">
         <h2>Our Kanchipuram Silk Sarees Collection</h2>
         <div class="product-grid">
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #1</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #2</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #3</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #4</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #5</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #6</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #7</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #8</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #9</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #10</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #11</h3><p>Click for details</p></div></a>
-            <a href="product-detail.html" style="text-decoration: none; color: inherit;"><div class="product-item-card"><div class="product-image-placeholder">Image</div><h3>Design #12</h3><p>Click for details</p></div></a>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-royal-blue', 'Kanchipuram Royal Blue Saree', '₹15,500', '₹22,000', 'images/silk_saree.jpg')">
+                <img src="images/silk_saree.jpg" alt="Kanchipuram Royal Blue Saree" class="product-image">
+                <h3>Kanchipuram Royal Blue Saree</h3>
+                <p>₹15,500 <span style="text-decoration: line-through; color: #999;">₹22,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-red-gold', 'Kanchipuram Red Gold Saree', '₹18,200', '₹25,000', 'images/silk_saree_collection.jpg')">
+                <img src="images/silk_saree_collection.jpg" alt="Kanchipuram Red Gold Saree" class="product-image">
+                <h3>Kanchipuram Red Gold Saree</h3>
+                <p>₹18,200 <span style="text-decoration: line-through; color: #999;">₹25,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-green-temple', 'Kanchipuram Green Temple Saree', '₹16,800', '₹24,000', 'images/background1.jpg')">
+                <img src="images/background1.jpg" alt="Kanchipuram Green Temple Saree" class="product-image">
+                <h3>Kanchipuram Green Temple Saree</h3>
+                <p>₹16,800 <span style="text-decoration: line-through; color: #999;">₹24,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-purple-elegance', 'Kanchipuram Purple Elegance Saree', '₹19,500', '₹28,000', 'images/background2.jpg')">
+                <img src="images/background2.jpg" alt="Kanchipuram Purple Elegance Saree" class="product-image">
+                <h3>Kanchipuram Purple Elegance Saree</h3>
+                <p>₹19,500 <span style="text-decoration: line-through; color: #999;">₹28,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-pink-pearl', 'Kanchipuram Pink Pearl Saree', '₹17,300', '₹26,000', 'images/background3.jpg')">
+                <img src="images/background3.jpg" alt="Kanchipuram Pink Pearl Saree" class="product-image">
+                <h3>Kanchipuram Pink Pearl Saree</h3>
+                <p>₹17,300 <span style="text-decoration: line-through; color: #999;">₹26,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-orange-bliss', 'Kanchipuram Orange Bliss Saree', '₹14,900', '₹21,000', 'images/silk_saree.jpg')">
+                <img src="images/silk_saree.jpg" alt="Kanchipuram Orange Bliss Saree" class="product-image">
+                <h3>Kanchipuram Orange Bliss Saree</h3>
+                <p>₹14,900 <span style="text-decoration: line-through; color: #999;">₹21,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-yellow-sunshine', 'Kanchipuram Yellow Sunshine Saree', '₹16,200', '₹23,000', 'images/silk_saree_collection.jpg')">
+                <img src="images/silk_saree_collection.jpg" alt="Kanchipuram Yellow Sunshine Saree" class="product-image">
+                <h3>Kanchipuram Yellow Sunshine Saree</h3>
+                <p>₹16,200 <span style="text-decoration: line-through; color: #999;">₹23,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-black-diamond', 'Kanchipuram Black Diamond Saree', '₹21,500', '₹32,000', 'images/background1.jpg')">
+                <img src="images/background1.jpg" alt="Kanchipuram Black Diamond Saree" class="product-image">
+                <h3>Kanchipuram Black Diamond Saree</h3>
+                <p>₹21,500 <span style="text-decoration: line-through; color: #999;">₹32,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-white-silver', 'Kanchipuram White Silver Saree', '₹18,700', '₹27,000', 'images/background2.jpg')">
+                <img src="images/background2.jpg" alt="Kanchipuram White Silver Saree" class="product-image">
+                <h3>Kanchipuram White Silver Saree</h3>
+                <p>₹18,700 <span style="text-decoration: line-through; color: #999;">₹27,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-maroon-royal', 'Kanchipuram Maroon Royal Saree', '₹19,200', '₹29,000', 'images/background3.jpg')">
+                <img src="images/background3.jpg" alt="Kanchipuram Maroon Royal Saree" class="product-image">
+                <h3>Kanchipuram Maroon Royal Saree</h3>
+                <p>₹19,200 <span style="text-decoration: line-through; color: #999;">₹29,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-teal-dream', 'Kanchipuram Teal Dream Saree', '₹15,800', '₹24,000', 'images/silk_saree.jpg')">
+                <img src="images/silk_saree.jpg" alt="Kanchipuram Teal Dream Saree" class="product-image">
+                <h3>Kanchipuram Teal Dream Saree</h3>
+                <p>₹15,800 <span style="text-decoration: line-through; color: #999;">₹24,000</span></p>
+            </div>
+            <div class="product-item-card" onclick="viewProduct('kanchipuram-magenta-magic', 'Kanchipuram Magenta Magic Saree', '₹17,600', '₹26,000', 'images/silk_saree_collection.jpg')">
+                <img src="images/silk_saree_collection.jpg" alt="Kanchipuram Magenta Magic Saree" class="product-image">
+                <h3>Kanchipuram Magenta Magic Saree</h3>
+                <p>₹17,600 <span style="text-decoration: line-through; color: #999;">₹26,000</span></p>
+            </div>
         </div>
     </main>
     
@@ -326,6 +374,23 @@
                 badge.textContent = totalItems;
                 badge.style.display = totalItems > 0 ? 'flex' : 'none';
             }
+        }
+
+        function viewProduct(productId, productName, productPrice, originalPrice, productImage) {
+            // Store product details in localStorage
+            const productDetails = {
+                id: productId,
+                name: productName,
+                price: Number(productPrice.replace(/[₹,]/g, '')),
+                originalPrice: Number(originalPrice.replace(/[₹,]/g, '')),
+                image: productImage,
+                category: 'silk-saree'
+            };
+
+            localStorage.setItem('selectedProduct', JSON.stringify(productDetails));
+
+            // Redirect to product detail page
+            window.location.href = 'product-detail.html';
         }
     </script>
 </body>
